# Proiect-ASC

./: .gitignore  CMakeLists.txt  README.md  ceva  main.cpp  run_tests.sh
include/: aritm.h  cmp.h  jmp.h  lea.h  logic.h  mov.h  movinit.h  mul.h  push.h
src/: aritm.cpp  cmp.cpp  jmp.cpp  lea.cpp  logic.cpp  main.cpp  mov.cpp  movinit.cpp  mul.cpp  push.cpp
test/Lab 0x02/: ex0x03.s  ex0x05.s  ex0x06.s  ex0x07.s  ex0x08.s  ex0x0B.s  mov_ex0x00.s  mov_ex0x01.s  mov_ex0x02.s  mov_ex0x03.s  mov_ex0x04.s  mov_ex0x05.s  mov_ex0x06.s  mov_ex0x07.s  mov_ex0x08.s  mov_ex0x09.s  mov_ex0x0A.s  mov_ex0x0B.s
test/Lab 0x02/Ex 0x00 Lab 0x02/: input.s
test/Lab 0x02/Ex 0x01 Lab 0x02/: input.s
test/Lab 0x02/Ex 0x02 Lab 0x02/: input.s
test/Lab 0x02/Ex 0x04 Lab 0x02/: input.s
test/Lab 0x02/Ex 0x07 Lab 0x02/: input.s
test/Lab 0x02/Ex 0x09 Lab 0x02/: input.s
test/Lab 0x02/Ex 0xA Lab 0x02/: input.s
test/Lab 0x04/: ex0x01.s  ex0x02.s  ex0x03.s  ex0x04.s  mov_ex0x00.s  mov_ex0x01.s  mov_ex0x02.s  mov_ex0x03.s  mov_ex0x04.s
test/Lab 0x04/Ex 0x00 Lab 0x04/: input.s
test/Lab 0x04/Ex 0x02 Lab 0x04/: input.s
